resolved mui datagrid overlap on header

--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -2,6 +2,7 @@ header {
     position: sticky;
     top: 0;
     width: 100vw;
+    z-index: 1; /*to avoid conflict with mui*/
 }
 
 header .settings-bar {
